# rcore-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
easy-fs/: Cargo.toml
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
loader/: Cargo.toml  Makefile
loader/src/: entry.S  kernel.S  linker.ld  main.rs
os/: .gitignore  Cargo.toml  build.rs
os/src/: batch.rs  config.rs  console.rs  entry.S  lang_items.rs  lib.rs  linker.ld  main.rs  mm.rs  sbi.rs  syscall.rs  task.rs  time.rs  timer.rs  trap.rs  utils.rs
os/src/mm/: address_space.rs  frame_allocator.rs  heap.rs  heap_allocator.rs  page_table.rs
os/src/task/: elf_loader.rs  manager.rs  pid.rs  processor.rs  stack.rs  switch.S
os/src/trap/: context.rs  trap.S
os/src/utils/: bit_field.rs
src/: console.rs  lib.rs  linker.ld  main.rs  sbi.rs
user-lib/: .gitignore  Cargo.toml  build.rs
user-lib/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
