[package]
name = "easy-fs"
version = "0.1.0"
edition = "2021"


[dependencies]
spin = "0.9"
lazy_static = "1.4"
bitflags = "1.3"
static_assertions = "1.1.0"

clap = { version = "4.0.11", features = ["derive"], optional = true }
anyhow = { version = "1.0.65", features = ["backtrace"], optional = true}

[features]
build-cli = ["clap", "anyhow"]

[[bin]]
name = "easy-fs"
required-features = ["build-cli"]
path = "src/bin/cli.rs"
