[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
lazy_static = { version = "1", features = ["spin_no_std"] }
# There aren't associated methods for manipulating Sstatus in this official
# riscv crate.
# riscv = "0.8"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bitflags = "1"
buddy_system_allocator = "0.8.0"
xmas-elf = "0.7.0"


[build-dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[profile.release]
debug = true
